# rikemorais.template.python

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: linters.yaml  tests.yaml
API/Conta/: index.html
docs/: index.md
docs/API/: Conta.md
docs/Projeto/: funcionalidades.md  log.md
docs/markdown/: settings.md
docs/stylesheets/: extra.css
markdown/funcionalidades/: index.html
markdown/log/: index.html
markdown/settings/: index.html
project/: conta.py
search/: search_index.json
tests/: test_global.py
