[tool.poetry]
name = "template-python"
version = "0.1.0"
description = "Template de Repositórios Python"
authors = ["Henrique Morais <rikeaju@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "template_python"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
